namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app1
---
apiVersion: v1
kind: Namespace
metadata:
  name: app2
---
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
