service-backendpolicy.yaml
# service-backendpolicy.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: app1
spec:
  selector:
    app: simple-webapp
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: app2
spec:
  selector:
    app: simple-webapp
  ports:
  - port: 80
    targetPort: 80
